--- a/frontend/src/Static/Style/Menu.css
+++ b/frontend/src/Static/Style/Menu.css
@@ -1,4 +1,5 @@
 .menu{
+    position: static;
     list-style: none;
     margin: 0%;
     padding: 0%;
@@ -10,6 +11,7 @@
     margin-top: 1.2rem;
     background-color: #D9D9D9;
     width: fit-content;
+    height: fit-content;
     padding: 4rem;
     border-radius: 3.1875rem;
 }
